# yaml_composer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build_docker_image.bat  pyproject.toml  yaml_composer.bat
.claude/commands/: commit.md
repo/services/: karakeep.yml  nextcloud.yml  pg_db_admin_service.yml
repo/stack/: karakeep.yml  nextcloud.yml
repo/stack/pg_db_admin/: pg_db_admin_app_stack.yml
repo/stack/pg_db_admin/sample_config/: notes.txt  pgpass  pgpass2  servers.json
repo/templates/: chrome_alpine.yml  core.yml  image_version.yml  karakeep.yml  meilisearch.yml  nextcloud.yml  pg_admin.yml  postgres.yml  redis.yml
src/py_yaml_composer/: main.py
src/py_yaml_composer/actions/: action_base.py  action_context.py  complex_action.py  default_actions.py  function_action.py  sort_action.py  xref_action.py
src/py_yaml_composer/generator/: base.py  yaml_generator.py
src/py_yaml_composer/traverser/: base.py  basic_dfs.py
src/py_yaml_composer/utility/: app_config.py  regex_helper.py
src/py_yaml_composer/utility/files/: base.py  yaml_helper.py
tests/py_yaml_composer_tests/: mock_file_helper.py  test_app_config.py  test_main.py  test_readme_examples.py  test_sort_action.py  test_xref_action.py  test_yaml.py  test_yaml_funct.py  test_yaml_helper.py  test_yaml_refs.py
